# Cloudyuquan

./: .env.example  .gitignore  .voicehub.dev.example.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: configuration.md  releasing.md
src/: App.tsx  asrDiagnostics.ts  audio-processor.worklet.ts  browserStorage.ts  errorMessages.ts  llmConfig.ts  llmPresets.ts  main.tsx  promptDisplayState.ts  styles.css  triggerKeyConfig.ts  uiWorkflow.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dev_config.rs  lib.rs  main.rs  mouse_shortcut.rs  persisted_config.rs
src-tauri/src/asr/: client.rs  mod.rs  retry.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/refine/: fast_path.rs  mod.rs  precise_path.rs  prompt.rs  templates.rs
src/components/: PromptMarkdown.tsx  TranscriptPanel.tsx  UiIcon.tsx  VoiceButton.tsx
src/hooks/: useAudio.ts  useGlobalShortcut.ts  useMouseShortcut.ts  useRefine.ts
src/types/: index.ts
tests/: asrDiagnostics.test.mjs  browserStorage.test.mjs  errorMessages.test.mjs  llmConfig.test.mjs  promptDisplayState.test.mjs  triggerKeyConfig.test.mjs  uiWorkflow.test.mjs
